mc-istio/istio/expose-istiod.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata: { name: istiod-gateway, namespace: istio-system }
spec:
  selector: { istio: eastwestgateway }
  servers:
  - { port: { number: 15012, name: tls-istiod,  protocol: TLS }, tls: { mode: PASSTHROUGH }, hosts: [ "*.local" ] }
  - { port: { number: 15017, name: tls-webhook, protocol: TLS }, tls: { mode: PASSTHROUGH }, hosts: [ "*.local" ] }
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata: { name: istiod-vs, namespace: istio-system }
spec:
  hosts: [ "istiod.istio-system.svc.cluster.local" ]
  gateways: [ istiod-gateway ]
  tls:
  - match: [ { port: 15012, sniHosts: [ "istiod.istio-system.svc.cluster.local" ] } ]
    route: [ { destination: { host: istiod.istio-system.svc.cluster.local, port: { number: 15012 } } } ]
  - match: [ { port: 15017, sniHosts: [ "istiod.istio-system.svc.cluster.local" ] } ]
    route: [ { destination: { host: istiod.istio-system.svc.cluster.local, port: { number: 15017 } } } ]
